examples/slpf/kubernetes_network_policy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: slpf-np-9j42x
    namespace: my5gtestbed
  spec:
    podSelector:
      matchLabels:
        oc2-net-10-17-1-25-32: "true"
    egress:
    - to:
      - ipBlock:
          cidr: 10.17.2.26/32
    podSelector: {}
    policyTypes:
    - Egress
  status: {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: slpf-np-jsjq6
    namespace: my5gtestbed
  spec:
    podSelector:
      matchLabels:
        oc2-net-10-17-2-26-32: "true"
    policyTypes:
    - Ingress
  status: {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: slpf-np-fnnxh
    namespace: my5gtestbed
  spec:
    podSelector:
      matchLabels:
        oc2-net-10-17-2-26-32: "true"
    ingress:
    - from:
      - ipBlock:
          cidr: 10.17.1.25/32
      ports:
      - protocol: TCP
    policyTypes:
    - Ingress
  status: {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: slpf-np-jbdw7
    namespace: my5gtestbed
  spec:
    podSelector:
      matchLabels:
        oc2-net-10-17-2-26-32: "true"
    ingress:
    - from:
      - ipBlock:
          cidr: 10.17.1.25/32
      ports:
      - protocol: UDP
    policyTypes:
    - Ingress
  status: {}
